baseline model anad developing scripts

--- a/code/processing.ipynb
+++ b/code/processing.ipynb
@@ -12,6 +12,17 @@
     "\n",
     "This notebooks will download, extract and process raw files (Grupo ZAP, IBGE) and save processed datasets.\n",
     "\n",
+    "Estimate time to run all notebook\n",
+    "\n",
+    "## Installation\n",
+    "\n",
+    "Make sure that you have executed the command below in the project's root path.\n",
+    "\n",
+    "```\n",
+    "pip install -r requirements.txt\n",
+    "```\n",
+    "\n",
+    "\n",
     "## Index\n",
     "\n",
     "- [Imports](#Imports)\n",
@@ -24,8 +35,10 @@
     "- [Load train dataset](#Load-train-dataset)\n",
     " - [Filtering](#Filtering)\n",
     " - [Processing train](#Processing-train)\n",
+    " - [Save train dataset](#Save-train-dataset)\n",
     "- [Load test dataset](#Load-test-dataset)\n",
-    " - [Processing test](#Processing-test)"
+    " - [Processing test](#Processing-test)\n",
+    " - [Save test dataset](#Save-test-dataset)"
    ]
   },
   {
@@ -96,6 +109,7 @@
     "    \"pricingInfos_businessType\": \"businessType\",\n",
     "    \"pricingInfos_yearlyIptu\": \"yearlyIptu\",\n",
     "    \"pricingInfos_monthlyCondoFee\": \"monthlyCondoFee\",\n",
+    "    \"id\": \"_id\"\n",
     "}\n",
     "\n",
     "censo_config = {\n",
@@ -116,7 +130,6 @@
     "        \"V014\": \"renda_nom_dom_sem_rendimento\"\n",
     "    },\n",
     "    \"Entorno01_SP1.csv\": {\n",
-    "        \"V1005\": \"rural_urbano\",\n",
     "        \"V002\": \"ident_logradouro_proprios\",\n",
     "        \"V003\": \"nao_ident_logradouro_proprios\",\n",
     "        \"V004\": \"ident_logradouro_alugados\",\n",
@@ -126,6 +139,11 @@
     "        \"V010\": \"ilum_publica_alugados\",\n",
     "        \"V011\": \"nao_ilum_publica_alugados\"\n",
     "    }\n",
+    "}\n",
+    "\n",
+    "processed_files = {\n",
+    "    \"train_path\": \"../data/processed/train.feather\",\n",
+    "    \"test_path\": \"../data/processed/test.feather\"\n",
     "}"
    ]
   },
@@ -158,6 +176,30 @@
     "        \n",
     "        file_path = files[\"train\"][\"output_path\"] + files[\"train\"][\"zip_name\"]\n",
     "        extract_zip(file_path=file_path, to_path=files[\"train\"][\"output_path\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test dataset by Grupo ZAP\n",
+    "\n",
+    "Download and extract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if files[\"download_files\"]:\n",
+    "    for file in files:\n",
+    "        download_url(url=files[\"test\"][\"url\"], file_name=files[\"test\"][\"zip_name\"],\n",
+    "                     to_path=files[\"test\"][\"output_path\"])\n",
+    "        \n",
+    "        file_path = files[\"test\"][\"output_path\"] + files[\"test\"][\"zip_name\"]\n",
+    "        extract_zip(file_path=file_path, to_path=files[\"test\"][\"output_path\"])"
    ]
   },
   {
@@ -322,7 +364,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
     "train_processed = processing(raw_train_flatten, converted_features, ibge_paths, shapefile_path, censo_config)"
    ]
   },
@@ -330,6 +371,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Save train dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = pd.DataFrame(train_processed)\n",
+    "print(df_train.shape)\n",
+    "df_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train.to_feather(processed_files[\"train_path\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
     "## Load test dataset"
    ]
   },
@@ -393,6 +472,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_test_flatten[0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -406,15 +494,60 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "test_processed = processing(raw_test_flatten[:10], converted_features, ibge_paths, shapefile_path, censo_config)"
+    "test_processed = processing(raw_test_flatten[:2], converted_features, ibge_paths, shapefile_path, censo_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert len(test_processed) == len(raw_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save test dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test = pd.DataFrame(test_processed)\n",
+    "print(df_test.shape)\n",
+    "df_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test.to_feather(processed_files[\"test_path\"])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -426,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
